[package]
name = "kasa_exporter"
version = "0.2.0"
description = "Prometheus exporter for TP-Link kasa devices"
authors = ["Ivan Babrou <hello@ivan.computer>"]
repository = "https://github.com/bobrik/kasa_exporter"
license = "MIT"
edition = "2018"

[features]
default = []
kasa_debug = []

[dependencies]
clap = { version = "2", default-features = false }
futures = { version = "0.3.5", default-features = false, features = ["std"] }
tokio = { version = "0.2", default-features = false, features = ["macros"] }
hyper = { version = "0.13", default-features = false }
hyper-tls = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
anyhow = { version = "1.0", default-features = false, features = ["std"] }
prometheus = { version = "0.9", default-features = false }
uuid = { version = "0.8", default-features = false, features = ["v4"] }
